--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.4.4",
     "@nestjs/graphql": "^7.8.1",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
     "apollo-server-express": "^2.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -49,7 +51,8 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
-    "@types/passport-google-oauth20": "^2.0.6",
+    "@types/passport-google-oauth20": "^2.0.8",
+    "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
