add user module for user creating

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -53,6 +54,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-google-oauth20": "^2.0.8",
     "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
