--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "stripe": "^8.191.0",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.2"
   },
