--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^7.1.4",
     "apollo-server-express": "^2.19.0",
     "class-transformer": "^0.3.1",
